--- a/style.css
+++ b/style.css
@@ -47,13 +47,6 @@ section {
     flex-direction: column;
 }
 
-.titulo-azul {
-    background-color: cadetblue;
-    color: white;
-    border-top-left-radius: 1vh;
-    border-top-right-radius: 1vh;
-}
-
 h2 {
     font-size: 2.5vh;
     padding: 1em;
@@ -104,7 +97,15 @@ p span {
     font-weight: bold;
 }
 
-.fondo-modal {
+.titulo-azul {
+    background-color: cadetblue;
+    color: white;
+    border-top-left-radius: 1vh;
+    border-top-right-radius: 1vh;
+}
+
+.fondo-modal,
+.fondo-modal-eliminar {
     margin-top: -5vh;
     height: 100%;
     width: 100%;
@@ -118,14 +119,16 @@ p span {
     width: 100%;
 }
 
-.container-form-modal {
+.container-form-modal,
+.container-form-modal-eliminar {
     display: flex;
     flex-direction: column;
     padding: 5%;
     color: rgb(63, 112, 114);
 }
 
-.ventana-modal {
+.ventana-modal,
+.ventana-modal-eliminar {
     box-sizing: content-box;
     width: 33%;
     background-color: white;
@@ -133,6 +136,44 @@ p span {
     margin-left: 33%;
     margin-top: 9%;
     border-radius: 1vh;
+}
+
+.footer-ventana-modal {
+    background-color: rgb(204, 224, 213);
+    border-bottom-left-radius: 1vh;
+    border-bottom-right-radius: 1vh;
+    padding: 1em;
+    display: flex;
+    justify-content: right;
+}
+
+#boton-cancelar-editar {
+    border: none;
+    background-color: white;
+    color: rgb(63, 112, 114);
+    cursor: pointer;
+    border-radius: 5px;
+    margin-right: 4%;
+    padding: 2%;
+}
+
+#boton-cancelar-eliminar {
+    border: none;
+    background-color: white;
+    color: rgb(63, 112, 114);
+    cursor: pointer;
+    border-radius: 5px;
+    margin-right: 4%;
+    padding: 2%;
+}
+
+.boton-guardar {
+    border: none;
+    background-color: rgb(63, 112, 114);
+    color: white;
+    cursor: pointer;
+    border-radius: 5px;
+    padding: 2%;
 }
 
 .oculto {
@@ -174,4 +215,13 @@ select {
 
 .input-sucursal option {
     padding: 0.5%;
+}
+
+.boton-editar,
+.boton-tacho {
+    border: none;
+    background-color: rgb(63, 112, 114);
+    color: white;
+    cursor: pointer;
+    border-radius: 5px;
 }
