--- a/style.css
+++ b/style.css
@@ -127,6 +127,10 @@ p span {
     color: rgb(63, 112, 114);
 }
 
+#no-revertir {
+    margin-left: 1em;
+}
+
 .ventana-modal,
 .ventana-modal-eliminar {
     box-sizing: content-box;
